<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">WaterQuest</string>
    <string name="mcquest">Multiple-Choice Quest</string>
    <string name="estquest">Estimate Quest</string>
    <string name="gameStart">Start Game</string>
    <string name="gameManual">Instructions</string>
    <string name="scoreTable">Scores</string>
    <string name="settingsEntry">Options</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="yourest">Your estimation</string>
    <string name="evalStr" formatted="false">You have finished\n%d of %d Quests successfully!</string>
    <string name="tapanywhere">Tap anywhere to continue</string>
    <string name="continueButton">Continue</string>
    <string name="buttonClose">Close</string>
    <string name="feedback1">Oh, No!</string>
    <string name="feedback2">Good!</string>
    <string name="feedback3">Great!</string>
    <string name="feedback4">Fantastic!</string>
    <string name="gamerSc">Your Gamerscore after this\nround is %d</string>
    <string name="credits">Credits</string>
    <string name="createdBy">Created By:</string>
    <string name="theCreators" translatable="false">Anton Schlömer\nAshley Hillebrand\nTimo Kalker\nMarius Gleißner</string>
    <string name="instructionText">Welcome to WaterQuest!\n"WaterQuest" is a creation of "gladSoft Productions" during a programming summercamp</string>
    <string name="VersionName" translatable="false">0.1 Beta 1</string>
	<string name="developmentOf">A development of:</string>
    <string name="correct">Correct!!!</string>
    <string name="wrong">Wrong :´(</string>
    <string name="estcorrect">Very good!\nThe value was: %f</string>
    <string name="estwrong">Too bad...\nThe value was: %f</string>

</resources>