<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:background="@color/mainactivity_mainbg">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/tv1" android:layout_gravity="center" android:textSize="52sp"
                android:textColor="@color/mainactivity_titletextcolor" android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" android:layout_marginTop="10dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_below="@+id/tv1" android:layout_centerHorizontal="true">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameStart"
                android:id="@+id/startButton" android:layout_gravity="center_horizontal" android:layout_weight="1"
                android:background="@color/mainactivity_mainbg" android:textSize="27sp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameManual"
                android:id="@+id/manualButton" android:layout_gravity="center_horizontal" android:layout_weight="1"
                android:background="@color/mainactivity_mainbg" android:textSize="27sp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scoreTable"
                android:id="@+id/scoretButton" android:layout_gravity="center_horizontal" android:layout_weight="1"
                android:background="@color/mainactivity_mainbg" android:textSize="27sp"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingsEntry"
                android:id="@+id/settingsButton" android:layout_gravity="center_horizontal" android:layout_weight="1"
                android:background="@color/mainactivity_mainbg" android:textSize="27sp"/>
    </LinearLayout>

</RelativeLayout>